Update index page

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 		<div id='mainContainer' class='container-fluid container-center'>
 			<!-- menu for large size screen -->
 			<nav id='largeSizeMenu' class='nav justify-content-end'>
-				<a class='nav-link' href='#'>ADMINISTRATOR</a>
+				<a class='nav-link' href='#'>SIGN UP</a>
 				<a class='nav-link' href='#'>CONTACT</a>
 			</nav>
 			<!-- Center text -->
 			<div class='center-elem center-text'>
 				<h1 id='mainTitle'>IVY</h1>
-				<p>Ivy is an elite college readiness solution that helps students align their portfolio to maximize potential admission from top US universities using objective analysis based on Machine Learning technologies.</p>
+				<h4>Ivy League admission consulting. Using Machine Learning.</h4>
+				<p>We provide a platform for university consulting firms to earn objective insight based on a collective database of past student data. To do this, we use advanced machine learning techniques recently used by companies like Google and Facebook.</p>
 				<div class='btn-group' id='main-buttons'>
-					<a href="menu.html" class="btn">LEARN MORE</a>
+					<a href="menu.html" class="btn">SIGN UP</a>
 				</div>
 			</div>
 			<!-- Copyright -->
@@ -43,7 +44,7 @@
 				<div class="collapse" id="navbarToggleExternalContent">
 					<div class="bg-inverse p-4">
 						<nav class="nav flex-column">
-								<a class="nav-link" href="#">ADMINISTRATOR</a>
+								<a class="nav-link" href="#">SIGN UP</a>
 								<a class="nav-link" href="#">CONTACT</a>
 						</nav>
 					</div>
