Add login page (not completed yet)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<h4>Ivy League admission consulting. Using Machine Learning.</h4>
 				<p>We provide a platform for university consulting firms to earn objective insight based on a collective database of past student data. To do this, we use advanced machine learning techniques recently used by companies like Google and Facebook.</p>
 				<div class='btn-group' id='main-buttons'>
-					<a href="menu.html" class="btn">SIGN UP</a>
+					<a href="menu.html" class="btn">SIGN IN</a>
 				</div>
 			</div>
 			<!-- Copyright -->
