--- a/index.html
+++ b/index.html
@@ -1,60 +1,61 @@
 <!doctype html>
 <html lang='en'>
-	<head>
-		<meta charset='utf-8'>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
+<head>
+	<meta charset='utf-8'>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
 
-		<title>IVY</title>
+	<title>IVY</title>
 
-		<!-- ### Libraries ###
-		     - jQuery 3.2.1
-			 - Bootstrap 4.0.0-alpha.6 -->
-		<script src="js/jquery-3.2.1.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- ### Libraries ###
+	- jQuery 3.2.1
+	- Bootstrap 4.0.0-alpha.6 -->
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
-		<!-- Javascript and CSS for this site -->
-		<script src="doc.js"></script>
-		<link rel="stylesheet" href="doc.css">
-		<link rel="stylesheet" href="css/index.css">
-	</head>
-	<body class='open-sans'>
-		<!-- main DIV for page -->
-		<div id='mainContainer' class='container-fluid container-center'>
-			<!-- menu for large size screen -->
-			<nav id='largeSizeMenu' class='nav justify-content-end'>
-				<a class='nav-link' href='#'>SIGN UP</a>
-				<a class='nav-link' href='#'>CONTACT</a>
-			</nav>
-			<!-- Center text -->
-			<div class='center-elem center-text'>
-				<h1 id='mainTitle'>IVY</h1>
-				<h4>Ivy League admission consulting. Using Machine Learning.</h4>
-				<p>We provide a platform for university consulting firms to earn objective insight based on a collective database of past student data. To do this, we use advanced machine learning techniques recently used by companies like Google and Facebook.</p>
-				<div class='btn-group' id='main-buttons'>
-					<a href="menu.html" class="btn">SIGN IN</a>
-				</div>
-			</div>
-			<!-- Copyright -->
-			<div id='copyright'>2017 ©Ivy, All Rights Reserved.</div>
-			<!-- menu for small size screen -->
-			<div id='smallSizeMenu' class="pos-f-t">
-				<div class="collapse" id="navbarToggleExternalContent">
-					<div class="bg-inverse p-4">
-						<nav class="nav flex-column">
-								<a class="nav-link" href="#">SIGN UP</a>
-								<a class="nav-link" href="#">CONTACT</a>
-						</nav>
-					</div>
-				</div>
-				<nav class="navbar navbar-inverse justify-content-end">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-				</nav>
+	<!-- Javascript and CSS for this site -->
+	<script src="doc.js"></script>
+	<link rel="stylesheet" href="doc.css">
+	<link rel="stylesheet" href="css/index.css">
+</head>
+<body class='open-sans'>
+	<!-- main DIV for page -->
+	<div id='mainContainer' class='container-fluid container-center'>
+		<!-- menu for large size screen -->
+		<nav id='largeSizeMenu' class='nav justify-content-end'>
+			<a class='nav-link' href='#'>SIGN UP</a>
+			<a class='nav-link' href='#'>CONTACT</a>
+		</nav>
+		<!-- Center text -->
+		<div class='center-elem center-text'>
+			<h1 id='mainTitle'>IVY</h1>
+			<h4>Ivy League admission consulting. Using Machine Learning.</h4>
+			<p>We provide a platform for university consulting firms to earn objective insight based on a collective database of past student data. To do this, we use advanced machine learning techniques recently used by companies like Google and Facebook.</p>
+			<div class='btn-group-vertical' id='main-buttons'>
+				<a href="login.php" id='signInButton' class="btn">SIGN IN</a>
+				<a href="menu.html" id='learnMoreButton' class="btn">LEARN MORE</a>
 			</div>
 		</div>
-	</body>
+		<!-- Copyright -->
+		<div id='copyright'>2017 ©Ivy, All Rights Reserved.</div>
+		<!-- menu for small size screen -->
+		<div id='smallSizeMenu' class="pos-f-t">
+			<div class="collapse" id="navbarToggleExternalContent">
+				<div class="bg-inverse p-4">
+					<nav class="nav flex-column">
+						<a class="nav-link" href="#">SIGN UP</a>
+						<a class="nav-link" href="#">CONTACT</a>
+					</nav>
+				</div>
+			</div>
+			<nav class="navbar navbar-inverse justify-content-end">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+			</nav>
+		</div>
+	</div>
+</body>
 </html>
