--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 	<title>IVY</title>
 
 	<!-- ### Libraries ###
-	- jQuery 3.2.1
-	- Bootstrap 4.0.0-alpha.6 -->
-	<script src="js/jquery-3.2.1.min.js"></script>
+  - jQuery 3.2.1
+  - jQuery UI 1.12.1
+  - Bootstrap 4.0.0
+  -->
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/jquery-ui.min.js"></script>
+  <link rel="stylesheet" href="css/jquery-ui.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -25,7 +29,7 @@
 	<div id='mainContainer' class='container-fluid container-center'>
 		<!-- menu for large size screen -->
 		<nav id='largeSizeMenu' class='nav justify-content-end'>
-			<a class='nav-link' href='#'>SIGN UP</a>
+			<a class='nav-link' href='login.php'>SIGN IN</a>
 			<a class='nav-link' href='#'>CONTACT</a>
 		</nav>
 		<!-- Center text -->
@@ -34,8 +38,8 @@
 			<h4>Ivy League admission consulting. Using Machine Learning.</h4>
 			<p>We provide a platform for university consulting firms to earn objective insight based on a collective database of past student data. To do this, we use advanced machine learning techniques recently used by companies like Google and Facebook.</p>
 			<div class='btn-group-vertical' id='main-buttons'>
-				<a href="login.php" id='signInButton' class="btn">SIGN IN</a>
-				<a href="menu.html" id='learnMoreButton' class="btn">LEARN MORE</a>
+				<a href="menu.html" id='signInButton' class="btn">LEARN MORE</a>
+				<!--<a href="menu.html" id='learnMoreButton' class="btn">LEARN MORE</a>-->
 			</div>
 		</div>
 		<!-- Copyright -->
@@ -45,7 +49,7 @@
 			<div class="collapse" id="navbarToggleExternalContent">
 				<div class="bg-inverse p-4">
 					<nav class="nav flex-column">
-						<a class="nav-link" href="#">SIGN UP</a>
+						<a class="nav-link" href="login.php">SIGN IN</a>
 						<a class="nav-link" href="#">CONTACT</a>
 					</nav>
 				</div>
