Change consult page location.

--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
   <div class='container-fluid'>
       <div class='row'>
           <a href='#' class='col-12 col-sm-4 menuImage' id='exploreMenu'><div><div class='menuTitle'>Explore</div><div class='menuDescription'>Explore your options.</div></div></a>
-          <a href='consult.html' class='col-12 col-sm-4 menuImage' id='consultMenu'><div><div class='menuTitle'>Consult</div><div class='menuDescription'>Start optimizing your portfolio.</div></div></a>
+          <a href='/consult' class='col-12 col-sm-4 menuImage' id='consultMenu'><div><div class='menuTitle'>Consult</div><div class='menuDescription'>Start optimizing your portfolio.</div></div></a>
           <a href='#' class='col-12 col-sm-4 menuImage' id='manageMenu'><div><div class='menuTitle'>Manage</div><div class='menuDescription'>Manage your educational organization.</div></div></a>
       </div>
   </div>
