--- a/consult/index.html
+++ b/consult/index.html
@@ -12,18 +12,18 @@
   - jQuery UI 1.12.1
   - Bootstrap 4.0.0
 -->
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/jquery-ui.min.js"></script>
-<link rel="stylesheet" href="css/jquery-ui.min.css">
+<script src="../js/jquery-3.2.1.min.js"></script>
+<script src="../js/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="../css/jquery-ui.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
 <!-- Javascript and CSS for this site -->
-<script src="doc.js"></script>
-<script src="js/consult.js"></script>
-<link rel="stylesheet" href="doc.css">
-<link rel="stylesheet" href="css/consult.css">
+<script src="../doc.js"></script>
+<script src="../js/consult.js"></script>
+<link rel="stylesheet" href="../doc.css">
+<link rel="stylesheet" href="../css/consult.css">
 </head>
 <body class='open-sans'>
   <nav class="navbar navbar-toggleable-md navbar-light">
